--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: This package performs robust hierarchical co-clustering between row
              divided into upregulatory and downregulatory groups by the influence of different chemical compounds groups 
              more accurately. It can also provide the statistical significance of the identified co-clusters. 
              See Hasan et al., (2020).
-License: GPL (>= 2)
+License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: stats,fields
