--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,text)
+importFrom(graphics,title)
 importFrom(stats,cutree)
 importFrom(stats,dist)
 importFrom(stats,hclust)
