Updated imports fields

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(plot_rhcoclust)
 export(rhcoclust)
+export(rhcoclust.network)
 export(simulate_data)
 importFrom(fields,image.plot)
 importFrom(grDevices,colorRampPalette)
@@ -12,6 +13,7 @@ importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,text)
 importFrom(graphics,title)
+importFrom(igraph,graph)
 importFrom(stats,cutree)
 importFrom(stats,dist)
 importFrom(stats,hclust)
