Added new function 'rhcoclust_internet' with related packages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(plot_rhcoclust)
 export(rhcoclust)
+export(rhcoclust_internet)
 export(rhcoclust_network)
 export(simulate_data)
 importFrom(fields,image.plot)
@@ -13,8 +14,14 @@ importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,text)
 importFrom(graphics,title)
+importFrom(igraph,V)
+importFrom(igraph,as_edgelist)
 importFrom(igraph,graph)
+importFrom(igraph,graph_from_edgelist)
+importFrom(igraph,layout_with_sugiyama)
 importFrom(stats,cutree)
 importFrom(stats,dist)
 importFrom(stats,hclust)
 importFrom(stats,rnorm)
+importFrom(tcR,reverse.string)
+importFrom(utils,combn)
