--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,26 @@
 Package: rhcoclust
-Title: Robust Hierarchical Co-Clustering to Identify Significant Co-Cluster of Samples and their Regulatory Features  
+Title: Robust Hierarchical Co-Clustering to Identify Significant Co-Cluster 
 Version: 1.0.0
-Author: Mohammad Nazmol Hasan [aut], Md. Bahadur Badsha [aut, cre] and Md. Nurul Haque Mollah [aut]
-Maintainer: Md. Bahadur Badsha <mbbadshar@gmail.com>
+Authors@R: 
+  c(person("Md. Bahadur",
+           "Badsha",
+           role = c("aut", "cre"),
+           email = "mbbadshar@gmail.com"),
+    person("Mohammad Nazmol",
+           "Hasan",
+           role = "aut"),
+    person("Md. Nurul Haque",
+           "Mollah",
+            role = "aut"))
 Description: Here we performs robust hierarchical co-clustering between row and column entities of a data matrix in 
              absence and presence of outlying observations. It can be used to explore important co-clusters consisting of  
-             important samples and their regulatory significant features. For example, this package co-cluster the genes and 
-             DCCs and detect biomarker co-clusters efficiently. The toxicogenomic biomarker genes and their regulatory DCCs 
-             can be explored from these biomarker co-clusters please see Hasan et al., 2020 <https://doi.org/10.1101/2020.05.13.094946>.
-License: GPL-3 + file LICENSE
+             important samples and their regulatory significant features. Please see Hasan, Badsha and Mollah (2020) 
+             <doi:10.1101/2020.05.13.094946>.
+License: GPL (>=2)
+Depends: R (>= 3.0)
 Encoding: UTF-8
 LazyData: true
+NeedsCompilation: no
 Imports: fields, grDevices, graphics, igraph, stats, tcR
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
