--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ importFrom(fields,image.plot)
 importFrom(grDevices,colorRampPalette)
 importFrom(graphics,abline)
 importFrom(graphics,image)
+importFrom(graphics,legend)
 importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,plot)
